--- a/index.html
+++ b/index.html
@@ -190,30 +190,14 @@
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+	    <li>TurboCAD</li>
+            <li>Assembly</li>
+            <li>SQL</li>
+            <li>Android Studio</li>
+            <li>Flutter</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -237,7 +221,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        Copyright &copy; 2020 BYRON TOMKINSON
                     </p>
                 </div>
                 <div class="col-sm-2 top">
