--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Byron Tomkinson</h1>
             <h2>Computer Science Student</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <img src="images/profile.png" alt="Profile picture">
         </div>
         <!-- End #lead-content -->
 
