--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Byron Tomkinson</h1>
             <h2>Computer Science Student</h2>
-            <img src="images/profile.png" alt="Profile picture"  width="100" height="100">
+            <img src="images/profile.png" alt="Profile picture"  width="200" height="200">
         </div>
         <!-- End #lead-content -->
 
@@ -100,32 +100,15 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
+            <h3>University of Pretoria</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Currently still busy.
             </p>
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
     </div>
     <!-- End #education -->
 
