--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Byron Tomkinson</h1>
             <h2>Computer Science Student</h2>
-            <img src="images/profile.png" alt="Profile picture"  width="200" height="200">
+            <img src="images/tableCircle.png" alt="Profile picture"  width="200" height="200">
         </div>
         <!-- End #lead-content -->
 
