--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/mouthpiece.png" />
+                        <img src="images/mouthpiece.png" width="300" height="387" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
