--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I am student at the University of Pretoria, currently studying in my 3rd year of Computer Science. Some of my skills include rapport building and listening, conflict resolution, problem solving and reliability. 
+			I am open minded when it comes to different ideas that are shared and helpful wherever I can be as well as empathetic with a great deal of integrity.
+			I have a passion for learning new things especially in the field of human anatomy and physiology. My hobbies include running, gymming, sailing and football.
                     </p>
                 </div>
             </div>
