--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <div class="col-md-8">
                     <p>
                         I am student at the University of Pretoria, currently studying in my 3rd year of Computer Science. Some of my skills include rapport building and listening, conflict resolution, problem solving and reliability. 
-			I am open minded when it comes to different ideas that are shared and helpful wherever I can be as well as empathetic with a great deal of integrity.
-			I have a passion for learning new things especially in the field of human anatomy and physiology. My hobbies include running, gymming, sailing and football.
+			I am open minded when it comes to different ideas that are shared and helpful wherever I can be.
+			I have a passion for learning new things especially, in the field of human anatomy and physiology. My hobbies include running, gymming, sailing and football.
                     </p>
                 </div>
             </div>
