--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>
                         I am student at the University of Pretoria, currently studying in my 3rd year of Computer Science. Some of my skills include conflict resolution, problem solving, rapport building and reliability. 
 			I am open minded when it comes to different ideas that are shared and helpful wherever I can be.
-			I have a passion for learning new things especially, in the field of human anatomy and physiology. My hobbies include running, gymming, sailing and football.
+			I have a passion for learning new things, especially in the field of human anatomy and physiology. My hobbies include running, gymming, sailing and football.
                     </p>
                 </div>
             </div>
