--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am student at the University of Pretoria, currently studying in my final year of Computer Science. Some of my skills include conflict resolution, problem solving, rapport building and reliability. 
+                        I am student at the University of Pretoria, currently completing my honours in Computer Science. Some of my skills include conflict resolution, problem solving, rapport building and reliability. 
 			I am open minded when it comes to different ideas that are shared and helpful wherever I can be.
-			I have a passion for learning new things, especially in the field of human anatomy and physiology. I am crazy about Jesus and  my hobbies include running, gymming and football.
+			I have a passion for learning new things, especially in the field of human anatomy and physiology. I am crazy about Jesus and  my hobbies include running, gymming, playing football, gaming and hiking.
                     </p>
                 </div>
             </div>
@@ -101,10 +101,10 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>University of Pretoria</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">Feb 2018 - Dec 2020</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <p>
-                Currently still busy.
+                Currently completing honours in Computer Science.
             </p>
         </div>
         <!-- End .education-block -->
