--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>
                         I am student at the University of Pretoria, currently completing my honours in Computer Science. Some of my skills include conflict resolution, problem solving, rapport building and reliability. 
 			I am open minded when it comes to different ideas that are shared and helpful wherever I can be.
-			I have a passion for learning new things, especially in the field of human anatomy and physiology. I am crazy about Jesus and  my hobbies include running, gymming, playing football, gaming and hiking.
+			I have a passion for learning new things, especially in the field of human anatomy and physiology. I am crazy about Jesus and my hobbies include running, gymming, playing football, gaming and hiking.
                     </p>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <h3></h3>
                 <h4>MTN job shadow</h4>
                 <p>
-                    Job shadowed over 15 employees at MTN Corporate office, Randburg.
+                    Job shadowed over 15 employees at MTN Corporate office, Randburg - 2016.
                 </p>
             </div>
         </div>
@@ -131,6 +131,20 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/com.png" alt="Data Visualisation picture"  width="300" height="387">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Data Visualisation</h3>
+                        <p>
+                            Thrid year Data visualisation project for EPI-USE.
+                        </p>
+                        <a href="https://data-visualisation-prod.herokuapp.com/">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
 		    
             </div>
         </div>
